--- a/6.0.1.md
+++ b/6.0.1.md
@@ -19,7 +19,17 @@ ALL change-log:
 
 ## System Titles
 
-\<fill this in (manually) later\>
+Besides [System Version Title](System%20Version%20Title.md "wikilink"),
+the following titles were updated:
+
+  - [hid-sysmodule](HID%20services.md "wikilink")
+  - [audio-sysmodule](Audio%20services.md "wikilink")
+  - [qlaunch](Qlaunch.md "wikilink")
+
+Nothing changed in the content of the updated titles' RomFS besides
+[System Version Title](System%20Version%20Title.md "wikilink"). Nothing
+changed sysmodule-side with IPC. No actual changes in
+[NPDMs](NPDM.md "wikilink").
 
 ## See Also
 
