--- a/6.0.1.md
+++ b/6.0.1.md
@@ -31,6 +31,12 @@ Nothing changed in the content of the updated titles' RomFS besides
 changed sysmodule-side with IPC. No actual changes in
 [NPDMs](NPDM.md "wikilink").
 
+### [audio-sysmodule](Audio%20services.md "wikilink")
+
+There was exactly 1 code change: in L\_1bf50, code was added for setting
+a certain variable to 0x1, immediately before:
+`if(someval)aforementioned_variable |= somefunc(...);`
+
 ## See Also
 
 System update
