--- a/6.0.1.md
+++ b/6.0.1.md
@@ -34,8 +34,9 @@ changed sysmodule-side with IPC. No actual changes in
 ### [audio-sysmodule](Audio%20services.md "wikilink")
 
 There was exactly 1 code change: in L\_1bf50, code was added for setting
-a certain variable to 0x1, immediately before:
-`if(someval)aforementioned_variable |= somefunc(...);`
+a certain variable to 0x1, located immediately before the following
+already existing code: `if(someval)aforementioned_variable |=
+somefunc(...);`
 
 ## See Also
 
