--- a/6.0.1.md
+++ b/6.0.1.md
@@ -33,10 +33,14 @@ changed sysmodule-side with IPC. No actual changes in
 
 ### [audio-sysmodule](Audio%20services.md "wikilink")
 
-There was exactly 1 code change: in L\_1bf50, code was added for setting
-a certain variable to 0x1, located immediately before the following
-already existing code: `if(someval)aforementioned_variable |=
+There was exactly 1 code change: in L\_1bf50
+(nn::audio::server::InfoUpdater::UpdateMixes), code was added for
+setting a certain variable to 0x1, located immediately before the
+following already existing code: `if(someval)aforementioned_variable |=
 somefunc(...);`
+
+This appears to be a simple bugfix to correct changes introduced in
+6.0.0 to the value of IsSplitterSupported.
 
 ## See Also
 
