--- a/6.0.0.md
+++ b/6.0.0.md
@@ -102,6 +102,21 @@ The only sysmodule with any changes for accessible IO in the
 [NPDM](NPDM.md "wikilink") was USB-sysmodule. The IO page for the [fuse
 registers](Fuses.md "wikilink") is now accessible by this sysmodule.
 
+### [nvservices-sysmodule](NV%20services.md "wikilink")
+
+Among various changes, the ["Transfer Memory leak in nvservices system
+module"](Switch%20System%20Flaws#System%20Modules.md##System_Modules "wikilink")
+system flaw was patched in the following way:
+
+  - [Initialize](NV%20services#Initialize.md##Initialize "wikilink") and
+    [InitializeDevtools](NV%20services#InitializeDevtools.md##InitializeDevtools "wikilink")
+    now keep track of the size of the transfer memory supplied by the
+    user.
+  - L\_34B90 (nvdrv's destructor) now calls L\_B4C30 (memset) on the
+    entire transfer memory region (using the size saved previously)
+    before calling
+    [svcUnmapTransferMemory](SVC#svcUnmapTransferMemory.md##svcUnmapTransferMemory "wikilink").
+
 ### olsc-sysmodule
 
 This new sysmodule handles cloud saves.
