--- a/6.1.0.md
+++ b/6.1.0.md
@@ -19,6 +19,11 @@ ALL change-log:
 
 \<fill this in (manually) later\>
 
+### [Internet Browser](Internet%20Browser.md "wikilink")
+
+While OSS was updated, nothing changed in the main-codebin besides a
+version string and the codebin-buildid.
+
 ## See Also
 
 System update
