--- a/6.1.0.md
+++ b/6.1.0.md
@@ -21,6 +21,8 @@ ALL change-log:
 
 ### [Internet Browser](Internet%20Browser.md "wikilink")
 
+The following changed for web-applet:
+
 While OSS was updated, nothing changed in the main-codebin besides a
 version string and the codebin-buildid.
 
