--- a/6.1.0.md
+++ b/6.1.0.md
@@ -17,14 +17,34 @@ ALL change-log:
 
 ## System Titles
 
-\<fill this in (manually) later\>
+The following 8XX titles (besides 809 and 816) were updated:
+
+  - 801 (ErrorMessage)
+  - 803 (BrowserDll)
+      - OSS files were updated.
+  - 80B (LocalNews)
+  - 818 (FirmwareDebugSettings)
+  - 822 (ControllerFirmware)
+      - Two new firmware files have been added: "PalmaFw.bin" (Poké Ball
+        Plus controller) and "ProController.dfu" (USB Pro Controller).
+  - 826 (RebootlessSystemUpdateVersion)
+      - Version number was bumped to 3.
 
 ### [Internet Browser](Internet%20Browser.md "wikilink")
 
-The following changed for web-applet:
+All web-applet titles were updated:
 
-While OSS was updated, nothing changed in the main-codebin besides a
-version string and the codebin-buildid.
+  - 100A (web)
+  - 100B (shop)
+  - 100F (offlineWeb)
+  - 1010 (loginShare)
+  - 1011 (wifiWebAuth)
+
+Nothing changed in the main-codebins besides a version string and the
+codebin-buildid.
+
+OSS was updated and a WebKit vulnerability was patched (see
+[here](Switch%20Userland%20Flaws.md "wikilink")).
 
 ## See Also
 
