--- a/6.1.0.md
+++ b/6.1.0.md
@@ -30,6 +30,15 @@ The following 8XX titles (besides 809 and 816) were updated:
   - 826 (RebootlessSystemUpdateVersion)
       - Version number was bumped to 3.
 
+The following sysmodules were updated:
+
+  - usb, nifm, hid, audio, pcie, account, ns, am, nim, btm, es, and
+    creport.
+      - The only sysmodules with new IPC commands are
+        [hid](HID%20services.md "wikilink"),
+        [account](Account%20services.md "wikilink"), and
+        [ns](NS%20Services.md "wikilink").
+
 ### [Internet Browser](Internet%20Browser.md "wikilink")
 
 All web-applet titles were updated:
