--- a/6.1.0.md
+++ b/6.1.0.md
@@ -39,6 +39,10 @@ The following sysmodules were updated:
         [account](Account%20services.md "wikilink"), and
         [ns](NS%20Services.md "wikilink").
 
+### [pcie-sysmodule](PCIe%20services.md "wikilink")
+
+Nothing changed besides the codebin-buildid.
+
 ### [Internet Browser](Internet%20Browser.md "wikilink")
 
 All web-applet titles were updated:
