Pro Controller was added before

--- a/6.1.0.md
+++ b/6.1.0.md
@@ -24,8 +24,8 @@ The following 8XX titles (besides 809 and 816) were updated:
   - 80B (LocalNews)
   - 818 (FirmwareDebugSettings)
   - 822 (ControllerFirmware)
-      - Two new firmware files have been added: "PalmaFw.bin" (Poké Ball
-        Plus controller) and "ProController.dfu" (USB Pro Controller).
+      - One new firmware file was added: "PalmaFw.bin" (Poké Ball Plus
+        controller).
   - 826 (RebootlessSystemUpdateVersion)
       - Version number was bumped to 3.
 
