--- a/6.0.1.md
+++ b/6.0.1.md
@@ -48,3 +48,5 @@ System update
     report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=10-08-18_08-05-09&sys=hac)
+
+[Category:System versions](Category:System_versions "wikilink")
