--- a/6.1.0.md
+++ b/6.1.0.md
@@ -64,3 +64,5 @@ System update
     report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=10-29-18_08-05-12&sys=hac)
+
+[Category:System versions](Category:System_versions "wikilink")
