Just a minor typo fix

--- a/2.0.0.md
+++ b/2.0.0.md
@@ -100,7 +100,7 @@ from Nintendo regarding this update:
       - Creation doesn't use KIrqSingleton directly anymore.
       - Instead it allocates a 0x20-byte entry, and then uses
         KIrqSingleton.
-      - Probaly to do better cleanup.
+      - Probably to do better cleanup.
 
 <!-- end list -->
 
