Add 6.2.0 to system versions category

--- a/6.2.0.md
+++ b/6.2.0.md
@@ -23,3 +23,5 @@ System update
     report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=11-19-18_07-05-09&sys=hac)
+
+[Category:System versions](Category:System_versions "wikilink")
