Fixed spacing from my last edit

--- a/6.2.0.md
+++ b/6.2.0.md
@@ -1,8 +1,11 @@
 The Switch 6.2.0 system update was released on November 19, 2018. This
 Switch update was released for the following regions: ALL.
 
-Security flaws fixed: Yes This update burns an additional fuse and has a
-fuse count of 8. 6.2.0 changes fundamental key
+Security flaws fixed: Yes
+
+This update burns an additional fuse and has a fuse count of 8.
+
+6.2.0 changes fundamental key
 generation.
 
 ## Change-log
