--- a/6.2.0.md
+++ b/6.2.0.md
@@ -20,6 +20,9 @@ ALL change-log:
 
 \<fill this in (manually) later\>
 
+*All* titles were updated (including flog) except for EULA, all of these
+(besides FIRM titles) use the new keydata.
+
 ## See Also
 
 System update
