--- a/6.2.0.md
+++ b/6.2.0.md
@@ -5,8 +5,10 @@ Security flaws fixed: Yes
 
 This update burns an additional fuse and has a fuse count of 8.
 
-6.2.0 changes fundamental key
-generation.
+6.2.0 changes fundamental key generation, no longer using keyblobs at
+all (the OS will boot successfully even if both copies of keyblob are
+replaced with FFs in
+NAND).
 
 ## Change-log
 
