--- a/6.2.0.md
+++ b/6.2.0.md
@@ -25,6 +25,10 @@ ALL change-log:
 *All* titles were updated (including flog) except for EULA, all of these
 (besides FIRM titles) use the new keydata.
 
+## FIRM
+
+Warmboot has been updated.
+
 ## See Also
 
 System update
