--- a/6.2.0.md
+++ b/6.2.0.md
@@ -27,7 +27,9 @@ ALL change-log:
 
 ## FIRM
 
-Warmboot has been updated.
+#### Warmboot
+
+The firmware revision magic was changed from 0x87 to 0xA8.
 
 ## See Also
 
