--- a/6.2.0.md
+++ b/6.2.0.md
@@ -27,6 +27,10 @@ ALL change-log:
 
 ## FIRM
 
+#### Kernel
+
+  - Kernel was not updated.
+
 #### Warmboot
 
 The firmware revision magic was changed from 0x87 to 0xA8.
