--- a/6.2.0.md
+++ b/6.2.0.md
@@ -31,6 +31,10 @@ ALL change-log:
 
   - Kernel was not updated.
 
+#### FIRM Sysmodules
+
+No FIRM sysmodules were updated.
+
 #### Warmboot
 
 The firmware revision magic was changed from 0x87 to 0xA8.
