--- a/6.2.0.md
+++ b/6.2.0.md
@@ -33,7 +33,7 @@ ALL change-log:
 
 #### FIRM Sysmodules
 
-No FIRM sysmodules were updated.
+  - No FIRM sysmodules were updated.
 
 #### Warmboot
 
