--- a/6.2.0.md
+++ b/6.2.0.md
@@ -27,6 +27,10 @@ ALL change-log:
 
 ## FIRM
 
+#### Secure Monitor
+
+The Secure Monitor was updated. \[details to be filled in later\].
+
 #### Kernel
 
   - Kernel was not updated.
