--- a/6.2.0.md
+++ b/6.2.0.md
@@ -27,6 +27,14 @@ ALL change-log:
 
 ## FIRM
 
+#### NX\_BOOTLOADER
+
+NX bootloader was updated, and is now stored compressed. Before
+executing, a small stub now uncompresses the bootloader to 0x40004000,
+size 0x1C000.
+
+\[more details to be filled in later\].
+
 #### Secure Monitor
 
 The Secure Monitor was updated. \[details to be filled in later\].
