--- a/6.2.0.md
+++ b/6.2.0.md
@@ -20,10 +20,12 @@ ALL change-log:
 
 ## System Titles
 
-\<fill this in (manually) later\>
+*All* titles were updated (including flog) except for EULA, to use the
+new keydata.
 
-*All* titles were updated (including flog) except for EULA, all of these
-(besides FIRM titles) use the new keydata.
+The following sysmodules were updated with actual changes:
+
+  - bcat, friends, hid, nvservices, account
 
 ## FIRM
 
