--- a/6.2.0.md
+++ b/6.2.0.md
@@ -53,6 +53,9 @@ The following sysmodules were updated with actual changes:
 
   - bcat, friends, hid, nvservices, account
 
+Besides sysver titles and FIRM, the only titles' with changed RomFS are
+web-applets, for "/.nrr/netfront.nrr".
+
 ## See Also
 
 System update
