--- a/6.2.0.md
+++ b/6.2.0.md
@@ -54,7 +54,7 @@ The following sysmodules were updated with actual changes:
   - bcat, friends, hid, nvservices, account
 
 Besides sysver titles and FIRM, the only titles' with changed RomFS are
-web-applets, for "/.nrr/netfront.nrr".
+web-applets, for "/.nrr/netfront.nrr" (only RSA data was changed here).
 
 ## See Also
 
