--- a/6.2.0.md
+++ b/6.2.0.md
@@ -56,6 +56,8 @@ The following sysmodules were updated with actual changes:
 Besides sysver titles and FIRM, the only titles' with changed RomFS are
 web-applets, for "/.nrr/netfront.nrr" (only RSA data was changed here).
 
+There seems to be no new service IPC commands.
+
 ## See Also
 
 System update
