--- a/6.2.0.md
+++ b/6.2.0.md
@@ -58,6 +58,11 @@ web-applets, for "/.nrr/netfront.nrr" (only RSA data was changed here).
 
 There seems to be no new service IPC commands.
 
+  - bcat: The codebin was updated, but no strings were added/changed.
+  - account: Besides .text changes: String "libcurl (nnDauth; <hex>; SDK
+    6.4.0.0)" was added. The "v3-<oldhexstr>" in the dauth URLs was
+    changed to "v4-<newhexstr>".
+
 ## See Also
 
 System update
