--- a/6.2.0.md
+++ b/6.2.0.md
@@ -80,6 +80,8 @@ There seems to be no new service IPC commands.
   - account: Besides .text changes: String "libcurl (nnDauth; <hex>; SDK
     6.4.0.0)" was added. The "v3-<oldhexstr>" in the dauth URLs were
     changed to "v4-<newhexstr>".
+  - nvservices: At least 2 vulnerabilities have been patched. See
+    [here](Switch%20System%20Flaws#System%20Modules.md##System_Modules "wikilink").
 
 ## See Also
 
