--- a/6.2.0.md
+++ b/6.2.0.md
@@ -60,7 +60,7 @@ There are zero changes to code outside of the coldboot .init section
 
 #### Warmboot
 
-The firmware revision magic was changed from 0x87 to 0xA8.
+  - The firmware revision magic was changed from 0x87 to 0xA8.
 
 ## System Titles
 
