--- a/News.txt
+++ b/News.txt
@@ -9,7 +9,7 @@ For older news, see the [[:News/Archive|news archive]].
 
 === News ===
 <!-- Add news below --></noinclude>
+*'''2 January 19''' [https://devkitpro.org/viewtopic.php?f=13&t=8826 libnx 2.0.0, switch-mesa 18.3 and switch-examples 20190102] were released.
 *'''29 November 18''' [https://github.com/Atmosphere-NX/Atmosphere/releases/tag/0.8.0 Atmosphère v0.8.0] was released.
 *'''29 November 18''' [https://github.com/switchbrew/nx-hbmenu/releases/latest nx-hbmenu v3.0.1] was released.
 *'''28 November 18''' [https://devkitpro.org/viewtopic.php?f=13&t=8813 libnx 1.6.0 and switch-examples 20181128] were released.
-*'''19 November 18''' Nintendo released system update [[6.2.0]].
