start filling in tz

--- a/7.0.0.md
+++ b/7.0.0.md
@@ -21,6 +21,26 @@ ALL change-log:
   - General system stability improvements to enhance the user's
     experience
 
+## FIRM
+
+#### NX\_BOOTLOADER
+
+NX bootloader was updated, and is now stored compressed. Before
+executing, a small stub now uncompresses the bootloader to 0x40004000,
+size 0x1C000.
+
+#### Secure Monitor
+
+The Secure Monitor was updated, and is now stored compressed. Before
+executing, a small stub now uncompresses the main TrustZone image to
+0x7C010800 size 0xC800, and environment setup code to 0x40032000 size
+0xC000.
+
+  - The 0x100 region used for NX\_BOOTLOADER \<-\> SecureMonitor
+    communications is now 0x40000000 instead of 0x40002E00.
+
+\[more details to be filled in later\].
+
 ## System Titles
 
 \<fill this in (manually) later\>
