--- a/7.0.0.md
+++ b/7.0.0.md
@@ -38,6 +38,8 @@ executing, a small stub now uncompresses the main TrustZone image to
 
   - The 0x100 region used for NX\_BOOTLOADER \<-\> SecureMonitor
     communications is now 0x40000000 instead of 0x40002E00.
+  - Memory permissions for .rodata have been fixed, it is now correctly
+    mapped R-- instead of R-W.
 
 \[more details to be filled in later\].
 
