--- a/7.0.0.md
+++ b/7.0.0.md
@@ -23,6 +23,8 @@ ALL change-log:
 
 ## FIRM
 
+All files under RomFS were updated.
+
 #### NX\_BOOTLOADER
 
 NX bootloader was updated, and is now stored compressed. Before
@@ -44,6 +46,10 @@ executing, a small stub now uncompresses the main TrustZone image to
 \[more details to be filled in later\].
 
 ## System Titles
+
+All titles were updated, except: "Chinese and Korean dictionaries",
+"European English and Japanese dictionaries", EULA, "Blacklist URL",
+"Dummy file", "Hoag system config", and flog.
 
 \<fill this in (manually) later\>
 
