--- a/7.0.0.md
+++ b/7.0.0.md
@@ -67,6 +67,15 @@ RomFS:
   - HID-sysmodule RomFS added new file: "/ftmFwUpdate:
     NTD\_4CD\_xxxx.fts256".
 
+NPDM:
+
+  - New services were [added](Services%20API.md "wikilink").
+  - bluetooth-sysmodule now has access to svcCreateSharedMemory.
+  - HID-sysmodule now has access to new service usb:qdb.
+  - ldn-sysmodule now has access to service psc:m.
+  - Various applets now have access to service "banana" (which still
+    doesn't exist on retail).
+
 \<fill this in (manually) later\>
 
 ## See Also
