new warmboot magic

--- a/7.0.0.md
+++ b/7.0.0.md
@@ -45,6 +45,10 @@ executing, a small stub now uncompresses the main TrustZone image to
 
 \[more details to be filled in later\].
 
+#### Warmboot
+
+  - The firmware revision magic was changed from 0xA8 to 0x129.
+
 ## System Titles
 
 All titles were updated, except: "Chinese and Korean dictionaries",
@@ -94,3 +98,5 @@ System update
     report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=01-28-19_07-05-12&sys=hac)
+
+[Category:System versions](Category:System_versions "wikilink")
