--- a/7.0.0.md
+++ b/7.0.0.md
@@ -63,7 +63,9 @@ RomFS:
     "/table/431FA316E20941779452DD0EBFA05E0E/ApplicationId" contains
     string "0x01003a400c3da000".
   - Web-applets were updated. "/whitelist/WhitelistEc.txt" in
-    LibAppletShop was updated.
+    LibAppletShop was updated:
+    "^https://(\[0-9A-Za-z\\-\]+\\.)\*eshop\\.nintendo\\.net($|/)" was
+    changed to "^https://(\[0-9A-Za-z\\-\]+\\.)\*nintendo\\.net(/|$)".
   - ControllerFirmware: "/ukyosakyo\_ep2\_ota.bin" and the .csv were
     updated.
   - Titles BrowserDll and AvatarImage were updated.
