--- a/7.0.0.md
+++ b/7.0.0.md
@@ -42,6 +42,8 @@ executing, a small stub now uncompresses the main TrustZone image to
     communications is now 0x40000000 instead of 0x40002E00.
   - Memory permissions for .rodata have been fixed, it is now correctly
     mapped R-- instead of RW-.
+  - Sealed old keys are now stored in the auxilliary data page
+    (0x1F01FA000) instead of in .rwdata.
 
 \[more details to be filled in later\].
 
