--- a/7.0.0.md
+++ b/7.0.0.md
@@ -43,10 +43,11 @@ executing, a small stub now uncompresses the main TrustZone image to
   - Memory permissions for .rodata have been fixed, it is now correctly
     mapped R-- instead of RW-.
   - Sealed old keys are now stored in the auxilliary data page
-    (0x1F01FA000) instead of in
-.rwdata.
-
-` * An 0x10 block in the auxilliary page is now used for intermediate key derivation, instead of a block on the stack. This block is only memcleared once at the end, instead of after every time it is used.`
+    (0x1F01FA000) instead of in .rwdata.
+      - An 0x10 block in the auxilliary page is now used for
+        intermediate key derivation, instead of a block on the stack.
+        This block is only memcleared once at the end, instead of after
+        every time it is used.
 
 \[more details to be filled in later\].
 
