--- a/7.0.0.md
+++ b/7.0.0.md
@@ -87,7 +87,8 @@ NPDM:
   - ldn-sysmodule now has access to service psc:m.
   - account-sysmodule: now has access to service npns:s.
   - ns-sysmodule: service access to prepo:s was replaced with srepo:u.
-    FS permissions now have bitmask 0x0000000400000000 set.
+    FS permissions now have bitmask 0x0000000400000000 set
+    (CanFormatSdCard).
   - nfc-sysmodule: now has access to services: psm, i2c, and gpio.
   - am-sysmodule: now has access to services lm and nvgem:cd.
   - btm-sysmodule: now has access to service srepo:u.
