/* System Titles */ - Add application information for 0x01003a400c3da000

--- a/7.0.0.md
+++ b/7.0.0.md
@@ -67,7 +67,7 @@ RomFS:
     titles.
   - CAction title: new directory "/table" was added. The new file
     "/table/431FA316E20941779452DD0EBFA05E0E/ApplicationId" contains
-    string "0x01003a400c3da000".
+    string "0x01003a400c3da000" - "YouTube".
   - Web-applets were updated. "/whitelist/WhitelistEc.txt" in
     LibAppletShop was updated:
     "^https://(\[0-9A-Za-z\\-\]+\\.)\*eshop\\.nintendo\\.net($|/)" was
