--- a/7.0.0.md
+++ b/7.0.0.md
@@ -44,14 +44,16 @@ executing, a small stub now uncompresses the main TrustZone image to
     mapped R-- instead of RW-.
   - Sealed old keys are now stored in the auxilliary data page
     (0x1F01FA000) instead of in .rwdata.
-  - TrustZone code is now cleared from IRAM before signalling to
-    NX\_BOOTLOADER that the SecMon is awake.
-  - A function for getting HardwareType based on fuses now returns 0xF
-    whenever it would previously have returned a non-zero value.
       - An 0x10 block in the auxilliary page is now used for
         intermediate key derivation, instead of a block on the stack.
         This block is only memcleared once at the end, instead of after
         every time it is used.
+  - TrustZone code is now cleared from IRAM before signalling to
+    NX\_BOOTLOADER that the SecMon is awake.
+  - A function for getting HardwareType based on fuses now returns 0xF
+    whenever it would previously have returned a non-zero value.
+  - Warmboot.bin has been moved again, and is now copied from 0x4003E000
+    size 0x17F0 instead of 0x4003D800 size 0x1FF0
 
 \[more details to be filled in later\].
 
