--- a/7.0.0.md
+++ b/7.0.0.md
@@ -25,6 +25,10 @@ ALL change-log:
 
 All files under RomFS were updated.
 
+The only KIPs with IPC changes were
+[FS](Filesystem%20services.md "wikilink") and
+[NCM](NCM%20services.md "wikilink").
+
 #### NX\_BOOTLOADER
 
 NX bootloader was updated, and is now stored compressed. Before
