--- a/7.0.0.md
+++ b/7.0.0.md
@@ -26,7 +26,8 @@ ALL change-log:
 All files under RomFS were updated.
 
 The only KIPs with IPC changes were
-[FS](Filesystem%20services.md "wikilink") and
+[FS](Filesystem%20services.md "wikilink"),
+[pm](Process%20Manager%20services.md "wikilink"), and
 [NCM](NCM%20services.md "wikilink").
 
 #### NX\_BOOTLOADER
