/* Secure Monitor */ lol

--- a/7.0.0.md
+++ b/7.0.0.md
@@ -57,6 +57,8 @@ executing, a small stub now uncompresses the main TrustZone image to
     NX\_BOOTLOADER that the SecMon is awake.
   - A function for getting HardwareType based on fuses now returns 0xF
     whenever it would previously have returned a non-zero value.
+      - This function is called by [smcGetConfig](SMC.md "wikilink")
+        when ConfigItem\_HardwareType is passed in.
   - Warmboot.bin has been moved again, and is now copied from 0x4003E000
     size 0x17F0 instead of 0x4003D800 size 0x1FF0
 
