/* Secure Monitor */ nice

--- a/7.0.0.md
+++ b/7.0.0.md
@@ -61,6 +61,11 @@ executing, a small stub now uncompresses the main TrustZone image to
         when ConfigItem\_HardwareType is passed in.
   - Warmboot.bin has been moved again, and is now copied from 0x4003E000
     size 0x17F0 instead of 0x4003D800 size 0x1FF0
+  - Code configuring what peripherals to set secure-world only now
+    assumes that the code is a retail unit.
+      - GetRetailType() is still called (though result is discarded),
+        this probably means they now have compile-time switches for
+        retail vs dev.
 
 \[more details to be filled in later\].
 
