/* FIRM */ anti-cfw pm tactic

--- a/7.0.0.md
+++ b/7.0.0.md
@@ -71,6 +71,22 @@ executing, a small stub now uncompresses the main TrustZone image to
 
   - The firmware revision magic was changed from 0xA8 to 0x129.
 
+#### FIRM Sysmodules
+
+All FIRM sysmodules were updated. Specific diffs for a few sysmodules
+are below:
+
+##### [PM](Process%20Manager%20services.md "wikilink")
+
+Resource limit initialization was changed:
+
+  - PM now sets the maximum number of threads creatable by sysmodules to
+    0x60 instead of 0x260.
+      - A [new
+        command](Process%20Manager%20services##EnableAdditionalSystemThreads.md###EnableAdditionalSystemThreads "wikilink")
+        was added to pm:shell to increase this limit once, on retail
+        this doubles the number of threads creatable to 0xC0.
+
 ## System Titles
 
 All titles were updated, except: "Chinese and Korean dictionaries",
