--- a/7.0.0.md
+++ b/7.0.0.md
@@ -83,7 +83,7 @@ Resource limit initialization was changed:
   - PM now sets the maximum number of threads creatable by sysmodules to
     0x60 instead of 0x260.
       - A [new
-        command](Process%20Manager%20services##EnableAdditionalSystemThreads.md###EnableAdditionalSystemThreads "wikilink")
+        command](Process%20Manager%20services#EnableAdditionalSystemThreads.md##EnableAdditionalSystemThreads "wikilink")
         was added to pm:shell to increase this limit once, on retail
         this doubles the number of threads creatable to 0xC0.
 
