--- a/7.0.0.md
+++ b/7.0.0.md
@@ -25,11 +25,6 @@ ALL change-log:
 
 All files under RomFS were updated.
 
-The only KIPs with IPC changes were
-[FS](Filesystem%20services.md "wikilink"),
-[pm](Process%20Manager%20services.md "wikilink"), and
-[NCM](NCM%20services.md "wikilink").
-
 #### NX\_BOOTLOADER
 
 NX bootloader was updated, and is now stored compressed. Before
@@ -73,7 +68,10 @@ executing, a small stub now uncompresses the main TrustZone image to
 
 #### FIRM Sysmodules
 
-All FIRM sysmodules were updated. Specific diffs for a few sysmodules
+All FIRM sysmodules were updated. The only FIRM sysmodules with IPC
+changes were [FS](Filesystem%20services.md "wikilink"),
+[pm](Process%20Manager%20services.md "wikilink"), and
+[NCM](NCM%20services.md "wikilink"). Specific diffs for a few sysmodules
 are below:
 
 ##### [PM](Process%20Manager%20services.md "wikilink")
