--- a/7.0.0.md
+++ b/7.0.0.md
@@ -129,6 +129,13 @@ NPDM:
   - Various applets now have access to service "banana" (which still
     doesn't exist on retail).
 
+### [usb-sysmodule](USB%20services.md "wikilink")
+
+  - New services / commands were added.
+  - The codebin now has .json data embedded in the codebin for
+    [HidGamepad](USB%20services#HidGamepad.md##HidGamepad "wikilink")
+    USB-devices.
+
 \<fill this in (manually) later\>
 
 ## See Also
