/* System Titles */ account

--- a/7.0.0.md
+++ b/7.0.0.md
@@ -136,6 +136,12 @@ NPDM:
     [HidGamepad](USB%20services#HidGamepad.md##HidGamepad "wikilink")
     USB-devices.
 
+### [account-sysmodule](Account%20services.md "wikilink")
+
+  - Various .text changes. Besides those:
+  - The "v4-<hexstr>" URLs were changed to "v5" URLs.
+  - User-agent was changed to "libcurl (nnDauth; <hex>; SDK 7.3.0.0)".
+
 \<fill this in (manually) later\>
 
 ## See Also
