--- a/7.0.0.md
+++ b/7.0.0.md
@@ -25,6 +25,22 @@ ALL change-log:
 
 All files under RomFS were updated.
 
+#### Package1ldr
+
+Since [6.2.0](6.2.0.md "wikilink"), the following was changed (besides
+the usual constant changes for new fuse burnt, incremented version,
+etc):
+
+  - A function that returns a hardware type now returns 0xF whenever it
+    would previously have returned a non-zero value.
+      - Code validating hardware type has been simplified accordingly.
+  - The function validating the bootloader version by parsing the BCT no
+    longer hardcodes the BCT address as 0x40000100, and instead adds a
+    relative offset to a BCT address specified via argument.
+  - The [SecureBoot TSEC
+    firmware](TSEC%20Firmware#SecureBoot.md##SecureBoot "wikilink") was
+    updated to prevent SMMU virtualization attacks.
+
 #### NX\_BOOTLOADER
 
 NX bootloader was updated, and is now stored compressed. Before
