--- a/7.0.1.md
+++ b/7.0.1.md
@@ -23,6 +23,12 @@ ALL change-log:
 
 \<fill this in (manually) later\>
 
+Nothing changed for services IPC.
+
+### FIRM
+
+Only BCT+package1 were updated.
+
 ## See Also
 
 System update
