--- a/7.0.1.md
+++ b/7.0.1.md
@@ -29,6 +29,25 @@ Nothing changed for services IPC.
 
 Only BCT+package1 were updated.
 
+#### Secure Monitor
+
+The Secure Monitor was updated.
+
+  - The only change in .text (besides relative branch offsets updating)
+    is that four instructions were inserted into the SMC handler.
+      - When the bit in boot reason that restricts access to certain
+        SMCs is set,
+        [smcSecureExpMod](SMC#SecureExpMod.md##SecureExpMod "wikilink")
+        is now blacklisted. Previously, only
+        [smcDecryptOrImportRsaKey](SMC#DecryptOrImportRsaKey.md##DecryptOrImportRsaKey "wikilink")
+        was blacklisted.
+  - The only data changes were that smcSecureExpMod is now allowed to be
+    called in recovery mode, and the global pointers for the TIMER,
+    WAIT, and UART-A regions now default to 0 instead of their physical
+    addresses.
+      - The default pointer value change is not meaningful, as these are
+        overwritten by initialization code before they are ever used.
+
 ## See Also
 
 System update
