--- a/7.0.1.md
+++ b/7.0.1.md
@@ -54,3 +54,5 @@ System update
     report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=02-18-19_07-05-10&sys=hac)
+
+[Category:System versions](Category:System_versions "wikilink")
