--- a/7.0.0.md
+++ b/7.0.0.md
@@ -118,8 +118,8 @@ RomFS:
     LibAppletShop was updated:
     "^https://(\[0-9A-Za-z\\-\]+\\.)\*eshop\\.nintendo\\.net($|/)" was
     changed to "^https://(\[0-9A-Za-z\\-\]+\\.)\*nintendo\\.net(/|$)".
-  - ControllerFirmware: "/ukyosakyo\_ep2\_ota.bin" and the .csv were
-    updated.
+  - ControllerFirmware: "/ukyosakyo\_ep2\_ota.bin" and FirmwareInfo.csv
+    were updated (main firmware for JoyLeft/JoyRight).
   - Titles BrowserDll and AvatarImage were updated.
   - Both bad-word-list titles were updated.
   - HID-sysmodule RomFS added new file: "/ftmFwUpdate:
