--- a/News.txt
+++ b/News.txt
@@ -9,7 +9,7 @@ For older news, see the [[:News/Archive|news archive]].
 
 === News ===
 <!-- Add news below --></noinclude>
+*'''29 March 19''' [https://devkitpro.org/viewtopic.php?f=13&t=8891 devkitA64 r13] and [https://github.com/switchbrew/libnx/releases/tag/v2.1.0 libnx v2.1.0] released with pthread/std::thread support.
+*'''26 March 19''' [https://github.com/Atmosphere-NX/Atmosphere/releases/tag/0.8.6 Atmosphère v0.8.6] released with lots of bugfixes, more cheat stuff and web applet homebrew support.
 *'''21 February 19''' [https://github.com/Atmosphere-NX/Atmosphere/releases/tag/0.8.4 Atmosphère v0.8.4] released with 7.0.x support.
 *'''18 February 19''' Nintendo released system update [[7.0.1]].
-*'''28 January 19''' Nintendo released system update [[7.0.0]].
-*'''24 January 19''' [https://github.com/Atmosphere-NX/Atmosphere/releases/tag/0.8.3 Atmosphère v0.8.3] and [https://github.com/switchbrew/nx-hbloader/releases/tag/v2.1.0 nx-hbloader v2.1.0] were released.
