--- a/8.0.0.md
+++ b/8.0.0.md
@@ -121,7 +121,12 @@ ALL change-log:
 
 ## System Titles
 
-\<fill this in (manually) later\>
+\<fill this in (manually) later\> 1 new title was added,
+0100000000000828.
+
+### 0100000000000828
+
+This contains `/blacklist.dat` which contains 8-bytes of zeros.
 
 ## See Also
 
