--- a/8.0.0.md
+++ b/8.0.0.md
@@ -121,10 +121,10 @@ ALL change-log:
 
 ## System Titles
 
-\<fill this in (manually) later\> 1 new title was added,
-0100000000000828.
+1 new title was added:
+[\#FunctionBlackList](#FunctionBlackList "wikilink").
 
-### 0100000000000828
+### FunctionBlackList
 
 This contains `/blacklist.dat` which contains 8-bytes of zeros.
 
