--- a/8.0.0.md
+++ b/8.0.0.md
@@ -122,7 +122,7 @@ ALL change-log:
 ## System Titles
 
 1 new title was added:
-[\#FunctionBlackList](#FunctionBlackList "wikilink").
+[FunctionBlackList](#FunctionBlackList "wikilink").
 
 ### FunctionBlackList
 
