--- a/8.0.0.md
+++ b/8.0.0.md
@@ -1,9 +1,8 @@
 The Switch 8.0.0 system update was released on April 15, 2019. This
 Switch update was released for the following regions: ALL.
 
-Security flaws fixed: \<fill this in manually later, see the
-updatedetails page from the ninupdates-report page(s) once available for
-now\>.
+Security flaws fixed:
+Yes.
 
 ## Change-log
 
@@ -29,7 +28,7 @@ ALL change-log:
     you to view all news items currently being distributed
 
   - 
-  - Go to News \&gt Channel List \&gt View More
+  - Go to News \&gt Channel List \> View More
 
   - 
   - 
@@ -49,7 +48,7 @@ ALL change-log:
     Nintendo Switch systems
 
   - 
-  - Go to System Settings \&gt Data Management \&gt Transfer Your Save
+  - Go to System Settings \> Data Management \&gt Transfer Your Save
     Data
 
   - Save data will not remain on your source system after the transfer
@@ -61,7 +60,7 @@ ALL change-log:
   - A Zoom feature can be enabled from within System Settings
 
   - 
-  - Go to System Settings \&gt System to turn Zoom ON
+  - Go to System Settings \> System to turn Zoom ON
 
   - Once enabled, you can use the Zoom feature by pressing the HOME
     Button twice
@@ -73,7 +72,7 @@ ALL change-log:
     Mode when an AC adapter is disconnected
 
   - 
-  - Go to System Settings \&gt Sleep Mode \&gt Wake When AC Adapter is
+  - Go to System Settings \> Sleep Mode \&gt Wake When AC Adapter is
     Disconnected
 
   - This also applies when undocking your console
@@ -88,7 +87,7 @@ ALL change-log:
   - This will also be available in the Nintendo Switch Parental Controls
     app through a later update
 
-  - Go to System Settings \&gt Parental Controls
+  - Go to System Settings \> Parental Controls
 
   - These settings can also be changed from within Nintendo Labo Toy-Con
     04: VR Kit
@@ -100,7 +99,7 @@ ALL change-log:
     Region
 
   - 
-  - Go to System Settings \&gt System \&gt Region
+  - Go to System Settings \> System \&gt Region
 
   - 
   - 
@@ -109,7 +108,7 @@ ALL change-log:
     same)
 
   - 
-  - Save Data Cloud Backup \&gt Save Data Cloud
+  - Save Data Cloud Backup \> Save Data Cloud
 
   - Transfer Your User and Save Data \&gt Transfer Your User Data
 
@@ -134,3 +133,5 @@ System update
     report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=04-15-19_08-05-11&sys=hac)
+
+[Category:System versions](Category:System_versions "wikilink")
