--- a/8.0.0.md
+++ b/8.0.0.md
@@ -72,7 +72,7 @@ ALL change-log:
     Mode when an AC adapter is disconnected
 
   - 
-  - Go to System Settings \> Sleep Mode \&gt Wake When AC Adapter is
+  - Go to System Settings \> Sleep Mode \> Wake When AC Adapter is
     Disconnected
 
   - This also applies when undocking your console
@@ -99,7 +99,7 @@ ALL change-log:
     Region
 
   - 
-  - Go to System Settings \> System \&gt Region
+  - Go to System Settings \> System \> Region
 
   - 
   - 
@@ -110,7 +110,7 @@ ALL change-log:
   - 
   - Save Data Cloud Backup \> Save Data Cloud
 
-  - Transfer Your User and Save Data \&gt Transfer Your User Data
+  - Transfer Your User and Save Data \> Transfer Your User Data
 
   - 
   - 
