--- a/8.0.0.md
+++ b/8.0.0.md
@@ -28,7 +28,7 @@ ALL change-log:
     you to view all news items currently being distributed
 
   - 
-  - Go to News \&gt Channel List \> View More
+  - Go to News \> Channel List \> View More
 
   - 
   - 
@@ -38,7 +38,7 @@ ALL change-log:
 
   - 
   - To edit your user icon, head to your My Page on the top left of the
-    HOME Menu \&gt Profile
+    HOME Menu \> Profile
 
   - 
   - 
@@ -48,8 +48,7 @@ ALL change-log:
     Nintendo Switch systems
 
   - 
-  - Go to System Settings \> Data Management \&gt Transfer Your Save
-    Data
+  - Go to System Settings \> Data Management \> Transfer Your Save Data
 
   - Save data will not remain on your source system after the transfer
     process completes
