--- a/8.0.0.md
+++ b/8.0.0.md
@@ -119,8 +119,10 @@ ALL change-log:
 
 ## System Titles
 
-1 new title was added:
-[FunctionBlackList](#FunctionBlackList "wikilink").
+  - 1 new title was added:
+    [FunctionBlackList](#FunctionBlackList "wikilink").
+  - All titles were updated, except for the following: dictionaries,
+    UrlBlackList, PlatformConfigHoag, miiEdit, and flog.
 
 ### FunctionBlackList
 
