--- a/8.0.0.md
+++ b/8.0.0.md
@@ -117,6 +117,48 @@ ALL change-log:
   - General system stability improvements to enhance the user's
     experience.
 
+## FIRM
+
+All files under RomFS were updated.
+
+#### Package1ldr
+
+package1ldr was updated. The TSEC secureboot firmware was not updated.
+
+#### NX\_BOOTLOADER
+
+NX bootloader was updated.
+
+#### Secure Monitor
+
+The Secure Monitor was updated.
+
+  - DMA controller configuration now disables AHB-DMA from arbitration.
+  - The SMC handler now checks a "is SMC allowed" bitmask against
+    configuration set by NX bootloader(This just comes from bits 1-4 of
+    the "attribute" field of the bootloader in BCT).
+      - Nintendo can now blacklist certain SMCs from certain boot
+        conditions, but since the bitmask is zero for retail firmware
+        (everything is allowed) this isn't particularly meaningful.
+  - smcGetConfig's "get\_memory\_configuration\_by\_bootconfig"
+    implementation changed. It now calls a new function
+    "get\_dram\_configuration", which returns a configuration value
+    depending on the DRAM ID.
+  - Code configuring what peripherals to set secure-world only no longer
+    assumes that the code is a retail unit.
+      - This removes what were presumed to be compile-time ifdefs for
+        retail vs dev added in [7.0.0](7.0.0.md "wikilink").
+  - Code responsible for configuring HiZ charger mode has changed a
+    little.
+      - smcCpuSuspend no longer checks hardware type when deciding
+        whether to go down HiZ mode codepaths.
+      - wakeup code on warmboot now checks whether HiZ mode is enabled,
+        instead of unconditionally disabling it.
+  - TSEC no longer has access to the kernel carveout, and TSECB now has
+    access to the kernel carveout.
+      - The Read/Write access levels were changed from 1 to 9, to
+        facilitate this.
+
 ## System Titles
 
   - 1 new title was added:
