--- a/8.0.0.md
+++ b/8.0.0.md
@@ -159,6 +159,10 @@ The Secure Monitor was updated.
       - The Read/Write access levels were changed from 1 to 9, to
         facilitate this.
 
+#### Warmboot
+
+  - The firmware revision magic was not changed.
+
 ## System Titles
 
   - 1 new title was added:
