--- a/8.0.0.md
+++ b/8.0.0.md
@@ -163,6 +163,17 @@ The Secure Monitor was updated.
 
   - The firmware revision magic was not changed.
 
+#### FIRM Sysmodules
+
+All FIRM sysmodules were updated. Specific diffs for a few sysmodules
+are below \<check back later, to be updated\>:
+
+##### [PM](Process%20Manager%20services.md "wikilink")
+
+  - pm:shell now has a new command (9), which currently just does
+    abort(). However, it looks like in a future update it will return an
+    event handle of some kind.
+
 ## System Titles
 
   - 1 new title was added:
