/* FIRM */ this is gonna be annoying to support, I can already tell. Kernelldr reimplementation?

--- a/8.0.0.md
+++ b/8.0.0.md
@@ -159,6 +159,20 @@ The Secure Monitor was updated.
       - The Read/Write access levels were changed from 1 to 9, to
         facilitate this.
 
+#### Kernel
+
+Kernel initialization has changed significantly.
+
+  - There is now a new loader program ("kernelldr") that runs before the
+    kernel, and sets up KASLR/memory/etc. (kernelldr has its own
+    .dynamic section).
+  - The INI1 containing the Initial Programs is no longer its own
+    section inside of [Package2](Package2.md "wikilink"). It is instead
+    now embedded inside the kernel section, with kernelldr preparing it
+    for the kernel.
+
+<check back later for more detailed diffs>
+
 #### Warmboot
 
   - The firmware revision magic was not changed.
