--- a/8.0.1.md
+++ b/8.0.1.md
@@ -16,7 +16,14 @@ ALL change-log:
   - 
 ## System Titles
 
-\<fill this in (manually) later\>
+The following titles were updated: [System Version
+Title](System%20Version%20Title.md "wikilink"),
+[qlaunch](Qlaunch.md "wikilink"), bsdsockets-sysmodule, hid-sysmodule,
+account-sysmodule, nim-sysmodule, and npns-sysmodule.
+
+Nothing changed with IPC new/removed commands, no NPDM changes, and no
+changes in any RomFS besides [System Version
+Title](System%20Version%20Title.md "wikilink").
 
 ## See Also
 
