--- a/8.0.1.md
+++ b/8.0.1.md
@@ -31,3 +31,5 @@ System update
     report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=04-23-19_08-05-10&sys=hac)
+
+[Category:System versions](Category:System_versions "wikilink")
