--- a/8.0.0.md
+++ b/8.0.0.md
@@ -1,8 +1,7 @@
 The Switch 8.0.0 system update was released on April 15, 2019. This
 Switch update was released for the following regions: ALL.
 
-Security flaws fixed:
-Yes.
+Security flaws fixed: Yes.
 
 ## Change-log
 
@@ -170,6 +169,10 @@ Kernel initialization has changed significantly.
     section inside of [Package2](Package2.md "wikilink"). It is instead
     now embedded inside the kernel section, with kernelldr preparing it
     for the kernel.
+  - svcQueryIoMapping no longer accepts unaligned addresses as input
+    when (input physaddr \>= 0x1000). In addition, when input physaddr
+    is \< 0x1000, the kernel takes a new codepath to convert this to a
+    different physical address.
 
 <check back later for more detailed diffs>
 
@@ -201,8 +204,7 @@ This contains `/blacklist.dat` which contains 8-bytes of zeros.
 
 ## See Also
 
-System update
-    report(s):
+System update report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=04-15-19_08-05-11&sys=hac)
 
