--- a/News.txt
+++ b/News.txt
@@ -9,7 +9,7 @@ For older news, see the [[:News/Archive|news archive]].
 
 === News ===
 <!-- Add news below --></noinclude>
+*'''1 May 19''' [https://devkitpro.org/viewtopic.php?f=13&t=8908 libnx v2.2.0 and switch-examples v20190501] released.
 *'''23 April 19''' Nintendo released system update [[8.0.1]].
 *'''15 April 19''' Nintendo released system update [[8.0.0]].
 *'''29 March 19''' [https://devkitpro.org/viewtopic.php?f=13&t=8891 devkitA64 r13] and [https://github.com/switchbrew/libnx/releases/tag/v2.1.0 libnx v2.1.0] released with pthread/std::thread support.
-*'''26 March 19''' [https://github.com/Atmosphere-NX/Atmosphere/releases/tag/0.8.6 Atmosphère v0.8.6] released with lots of bugfixes, more cheat stuff and web applet homebrew support.
