--- a/8.0.0.md
+++ b/8.0.0.md
@@ -187,9 +187,10 @@ are below \<check back later, to be updated\>:
 
 ##### [PM](Process%20Manager%20services.md "wikilink")
 
-  - pm:shell now has a new command (9), which currently just does
-    abort(). However, it looks like in a future update it will return an
-    event handle of some kind.
+  - pm:shell now has a new command (9), which does abort() in normal
+    FIRM. However, when in safe mode, it returns a handle to an event
+    that is signaled on IShellService-\>NotifyBootFinished(), before the
+    embedded safemode boot2 runs.
 
 ## System Titles
 
