--- a/7.0.0.md
+++ b/7.0.0.md
@@ -101,6 +101,18 @@ Resource limit initialization was changed:
         was added to pm:shell to increase this limit once, on retail
         this doubles the number of threads creatable to 0xC0.
 
+##### [FS](Filesystem%20services.md "wikilink")
+
+  - Device Address Space initialization for nn::sdmmc is now handled
+    differently.
+      - Previously, the shared SDMMC device address space handle was
+        attached to all devices during global init prior to service
+        registration.
+      - Now, the handle is attached to specific devices during their
+        relevant DeviceAccessor::Initialize() call, which only happens
+        when the relevant device is ready for access.
+  - (Many other differences not yet reversed/noted here.)
+
 ## System Titles
 
 All titles were updated, except: "Chinese and Korean dictionaries",
@@ -162,8 +174,7 @@ NPDM:
 
 ## See Also
 
-System update
-    report(s):
+System update report(s):
 
   - [1](https://yls8.mtheall.com/ninupdates/reports.php?date=01-28-19_07-05-12&sys=hac)
 
