--- a/8.1.0.md
+++ b/8.1.0.md
@@ -18,6 +18,12 @@ ALL change-log:
 
 \<fill this in (manually) later\>
 
+No changes with IPC service commands.
+
+## Keys
+
+Keys were updated.
+
 ## See Also
 
 System update report(s):
