--- a/8.1.0.md
+++ b/8.1.0.md
@@ -1,9 +1,7 @@
 The Switch 8.1.0 system update was released on June 17, 2019. This
 Switch update was released for the following regions: ALL.
 
-Security flaws fixed: \<fill this in manually later, see the
-updatedetails page from the ninupdates-report page(s) once available for
-now\>.
+Security flaws fixed: yes.
 
 ## Change-log
 
