--- a/8.1.0.md
+++ b/8.1.0.md
@@ -14,6 +14,8 @@ ALL change-log:
   - 
 ## FIRM
 
+All files in RomFS were updated.
+
 #### Package1ldr
 
 package1ldr was updated. The TSEC secureboot firmware was updated.
