--- a/8.1.0.md
+++ b/8.1.0.md
@@ -68,6 +68,10 @@ below \<check back later, to be updated\>:
 
 No changes with IPC service commands.
 
+Titles' RomFS changes:
+
+  - BrowserDll: the NROs and buildinfo were updated.
+
 ## Keys
 
 Keys were updated.
